--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
           node-version: "lts/*"
 
       - name: Install semantic-release
-        run: npm install -g semantic-release @semantic-release/github @semantic-release/git @semantic-release/changelog
+        run: npm install -g semantic-release @semantic-release/github @semantic-release/git @semantic-release/changelog @semantic-release/npm @semantic-release/release-notes-generator @semantic-release/commit-analyzer
 
       - name: Release
         env:
