ci: small updates

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -15,49 +15,14 @@
         "preset": "angular",
         "writerOpts": {
           "groupBy": "type",
-          "commitsSort": "header",
-          "commitGroupsSort": [
-            "feat",
-            "fix",
-            "perf",
-            "refactor",
-            "docs",
-            "style",
-            "test",
-            "build",
-            "ci",
-            "chore"
-          ]
-        },
-        "linkCompare": true,
-        "linkReferences": true,
-        "headerPartial": "## {{version}} ({{date}})\n\n",
-        "mainTemplate": "{{> header}}\n\n{{#with commits}}{{#each groups}}{{#if commits.length}}### {{title}}\n\n{{#each commits}}{{> commit root=@root}}{{/each}}\n{{/if}}{{/each}}{{/with}}\n\n{{> footer}}",
-        "commitPartial": "* {{header}} {{#if hash}}([{{shortHash}}]({{commitUrl}})){{/if}}\n",
-        "partials": {
-          "header": "## {{version}} ({{date}})\n\n",
-          "commit": "* {{header}} {{#if hash}}([{{shortHash}}]({{commitUrl}})){{/if}}\n",
-          "footer": ""
-        },
-        "presetConfig": {
-          "types": [
-            {"type": "feat", "section": "✨ Features"},
-            {"type": "fix", "section": "🐛 Bug Fixes"},
-            {"type": "perf", "section": "🚀 Performance Improvements"},
-            {"type": "refactor", "section": "🧼 Code Refactoring"},
-            {"type": "docs", "section": "📚 Documentation"},
-            {"type": "style", "section": "💄 Styles"},
-            {"type": "test", "section": "✅ Tests"},
-            {"type": "build", "section": "🏗️ Build System"},
-            {"type": "ci", "section": "👷 Continuous Integration"},
-            {"type": "chore", "section": "🔧 Chores"}
-          ]
+          "commitGroupsSort": ["feat", "fix", "perf", "refactor"],
+          "commitsSort": "header"
         }
       }],
       ["@semantic-release/github", {
         "assets": [],
         "successComment": "🎉 This ${issue.pull_request ? 'PR is included' : 'issue is fixed'} in version ${nextRelease.version}",
-        "failComment": "❌ Release failed due to an error.",
+        "failComment": "❌ Release failed due to an error",
         "failTitle": "Release Failed",
         "labels": ["released"],
         "releasedLabels": ["released"]
