--- a/.releaserc.json
+++ b/.releaserc.json
@@ -8,7 +8,8 @@
           {"type": "refactor", "release": "patch"},
           {"type": "style", "release": "patch"},
           {"type": "perf", "release": "patch"},
-          {"type": "test", "release": "patch"}
+          {"type": "test", "release": "patch"},
+          {"type": "wip", "release": false}
         ]
       }],
       ["@semantic-release/release-notes-generator", {
