--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,36 +1,57 @@
 {
-    "branches": ["main"],
-    "plugins": [
-      ["@semantic-release/commit-analyzer", {
+  "branches": ["main"],
+  "plugins": [
+    [
+      "@semantic-release/commit-analyzer",
+      {
         "preset": "angular",
         "releaseRules": [
-          {"type": "docs", "scope": "README", "release": "patch"},
-          {"type": "refactor", "release": "patch"},
-          {"type": "style", "release": "patch"},
-          {"type": "perf", "release": "patch"},
-          {"type": "test", "release": "patch"},
-          {"type": "wip", "release": false}
+          { "type": "perf", "release": "patch" },
+          { "type": "docs", "release": false },
+          { "type": "refactor", "release": false },
+          { "type": "test", "release": false },
+          { "type": "website", "release": false },
+          { "type": "mobile", "release": false }
         ]
-      }],
-      ["@semantic-release/release-notes-generator", {
+      }
+    ],
+    [
+      "@semantic-release/release-notes-generator",
+      {
         "preset": "angular",
         "writerOpts": {
-          "groupBy": "type",
-          "commitGroupsSort": ["feat", "fix", "perf", "refactor"],
-          "commitsSort": "header"
+          "commitsSort": ["subject", "scope"],
+          "types": [
+            { "type": "feat", "section": "Features" },
+            { "type": "fix", "section": "Bug Fixes" },
+            { "type": "perf", "section": "Performance Improvements" },
+            { "type": "refactor", "section": "Refactor" },
+            { "type": "docs", "section": "Documentation" },
+            { "type": "test", "section": "Tests" },
+            { "type": "website", "section": "Website" },
+            { "type": "mobile", "section": "Mobile" }
+          ],
+          "includeCommitWhenNoBump": true
         }
-      }],
-      ["@semantic-release/github", {
+      }
+    ],
+    [
+      "@semantic-release/github",
+      {
         "assets": [],
         "successComment": "🎉 This ${issue.pull_request ? 'PR is included' : 'issue is fixed'} in version ${nextRelease.version}",
         "failComment": "❌ Release failed due to an error",
         "failTitle": "Release Failed",
         "labels": ["released"],
         "releasedLabels": ["released"]
-      }],
-      ["@semantic-release/git", {
+      }
+    ],
+    [
+      "@semantic-release/git",
+      {
         "assets": ["package.json"],
         "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
-      }]
+      }
     ]
-  } 
+  ]
+}
